--- a/contactpage/contact.html
+++ b/contactpage/contact.html
@@ -52,7 +52,7 @@
 <header>
   <h1><span class="next">Next</span><span class="wave">Wave</span></h1>
   <nav>
-    <a href="../indexpage/index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="../aboutpage/about.html">About</a>
     <a href="../servicepage/service.html">Services</a>
     <a href="../contactpage/contact.html" class="active">Contact</a>
