--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NextWave - Home</title>
-  <link rel="icon" type="image" href="../next1.png">
-  <link rel="stylesheet" href="../style/style.css" />
+  <link rel="icon" type="image/png" href="next1.png">
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
 
@@ -14,10 +14,10 @@
   <h1><span class="next">Next</span><span class="wave">Wave</span></h1>
    <!-- <img class="next-img" src="next.png" alt="img"> -->
   <nav class="nav">
-    <a href="../indexpage/index.html">Home</a>
-    <a href="../aboutpage/about.html">About</a>
-    <a href="../servicepage/service.html">Services</a>
-    <a href="../contactpage/contact.html">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="aboutpage/about.html">About</a>
+    <a href="servicepage/service.html">Services</a>
+    <a href="contactpage/contact.html">Contact</a>
   </nav>
 </header>
 
