--- a/servicepage/service.html
+++ b/servicepage/service.html
@@ -56,7 +56,7 @@
 <header>
   <h1><span class="next">Next</span><span class="wave">Wave</span></h1>
   <nav>
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <a href="../aboutpage/about.html">About</a>
     <a href="../servicepage/service.html" class="active">Services</a>
     <a href="../contactpage/contact.html">Contact</a>
@@ -112,6 +112,6 @@
   <p>© 2025 NextWave Digital Marketing | All rights reserved.</p>
 </footer>
 
-<script src="script/script.js"></script>
+<script src="../script/script.js"></script>
 </body>
 </html>
