--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -12,7 +12,7 @@
 <header>
   <h1><span class="next">Next</span><span class="wave">Wave</span></h1>
   <nav class="nav-link">
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <a href="../aboutpage/about.html">About</a>
     <a href="../servicepage/service.html">Services</a>
     <a href="../contactpage/contact.html">Contact</a>
@@ -62,6 +62,6 @@
   <p>© 2025 NextWave Digital Marketing | All rights reserved.</p>
 </footer>
 
-<script src="script/script.js"></script>
+<script src="../script/script.js"></script>
 </body>
 </html>
